# service_py

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_users_table.py  0003_roles_and_user_roles.py  1a682359f52c_add_docs.py  1dab265b2f82_update_docs.py  3c9235604c52_update_user_table.py  64136ce8772c_describe_change.py  6c7e07520f6e_圈地二期.py  a7b8c9d0e1f2_restore_agri_drawn_parcel_indexes.py  ac2ff5488c02_update_docs.py  b2c3d4e5f6a7_agri_drawn_parcel_area_ha.py  b3c4d5e6f7a8_help_document_upload_storage.py  bf8026755c7d_add_argi.py  c4d5e6f7a8b9_agri_drawn_parcel.py  d4e5f6a7b8c9_agri_phase2_indices_drawn_obs.py  e7f8a9b0c1d2_roles_uid_uuid.py  f8a9b0c1d2e3_users_pk_uuid_user_id.py  fc2e28ddeeaa_update_role_id_change_uuid.py  g9h0a1b2c3d4_add_message_notification_tables.py  h0i1j2k3l4m5_add_help_documents.py  i1j2k3l4m5n6_help_documents_docs_relpath.py  k3l4m5n6o7p8_add_agri_remote_sensing.py
docs/: DEVELOPMENT.md  FRONTEND.md  FRONTEND_API.md  USER_ROLES_DESIGN.md
docs/agri-remote-sensing/: DATA_MODEL_DEMO.md  DEV_PLAN.md  FRONTEND_API_AGRI.md  REQUIREMENTS.md  TITILER_FRONTEND.md  TITILER_STANDALONE.md
scripts/: messages_sse_smoke.py  seed_demo_messages.py
src/app/: main.py
tests/: conftest.py  test_agri_api.py  test_ai_chat.py  test_auth.py  test_auth_change_password.py  test_docs_api.py  test_health.py  test_help_document_files.py  test_help_static_url.py  test_knowledge.py  test_messages_api.py  test_messages_sse_push.py  test_polygon_area.py  test_upload_markdown_convert.py  test_users_api.py
(+61 files in other folders)
